# IAAnalisisModel_V2

./: .codacy.yaml  .gitignore  docker-compose.yaml  main.py  pyproject.toml  tinybird.config.json
.github/workflows/: tinybird-cd.yml  tinybird-ci.yml
res/models/config/: bytetrack.yaml
src/config/: __init__.py  configuration.py  routes.py
src/core/database/: __init__.py  connection_manager.py
src/core/post_processing/: physics_processing.py
src/core/reporter/: detections_reporter.py  time_reporter.py
src/core/repository/: __init__.py  ball_repository.py  depth_history_repository.py  goal_repository.py  player_repository.py  player_states_repository.py  r2_repository.py  task_repository.py
src/core/services/: __init__.py  executor_service.py  global_value_store.py  player_validator.py  player_validator_physics.py  r2_manager.py
src/core/tasks/: analysis_steps.py  executor.py  orchestrator.py
src/core/trackers/: __init__.py  ball_tracker.py  goal_tracker.py  player_tracker.py  tracker_manager.py
src/core/utils/: video_utils.py
src/core/video/: __init__.py  annotators.py  video_manager.py
src/core/vision/: __init__.py  camera_scale.py  color_recognizer.py  depth_estimator.py  pixels_converter.py
src/entities/models/: __init__.py  base_models.py
src/entities/services/: __init__.py  annotator_service.py  physics_processing_base.py  physics_processing_model.py  player_validator_base.py  r2_manager.py  r2_manager_base.py  video_manager.py  video_manager_base.py
src/entities/types/: bucket_types.py  (+3 more)
src/tinybird/: client.py  tinybird_resources.py
(+36 files in other folders)
