[project]
name = "proyecto-capstone-model-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.13",
    "fastapi>=0.136.1",
    "fastapi-cache2>=0.2.2",
    "logfire>=4.32.1",
    "matplotlib>=3.10.9",
    "sqlmodel>=0.0.38",
    "supervision>=0.28.0",
    "tinybird-sdk>=0.1.8",
    "ultralytics>=8.4.47",
]
